# ai-practice

./: .gitignore  README.md  code.py  imi_poem.py  main.py  math_solving.py  prompt.py  pyproject.toml  restAPI.py
