[project]
name = "ai-practice"
version = "0.1.0"
description = "AI practice environment"
authors = [
    {name = "Eddie Liu",email = "el3798@nyu.edu"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
